follow php syntax by allow more constructs in foreach statements

BUG: 276603